--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - db
 
   db:
-    image: postgres:14-alpine
+    image: postgres:16-alpine3.20
     ports:
       - "5432:5432"
     env_file:
